reformat code according to checkstyle