@@ -1,32 +1,43 @@
 package ru.pavelyurkin.musiccomposer.core.composer.next.filter.custom;
 
-import ru.pavelyurkin.musiccomposer.core.composer.next.filter.*;
-import ru.pavelyurkin.musiccomposer.core.composer.next.filter.musicblock.*;
+import static jm.constants.Durations.EIGHTH_NOTE;
+import static jm.constants.Durations.WHOLE_NOTE;
+import static jm.constants.Pitches.A2;
+import static jm.constants.Pitches.A4;
+import static jm.constants.Pitches.C4;
+import static jm.constants.Pitches.C6;
+import static jm.constants.Pitches.F2;
+import static jm.constants.Pitches.F3;
+import static jm.constants.Pitches.F4;
+import static jm.constants.Pitches.F5;
 
 import java.util.Arrays;
 import java.util.List;
-
-import static jm.constants.Durations.*;
-import static jm.constants.Pitches.*;
+import ru.pavelyurkin.musiccomposer.core.composer.next.filter.FastComposeStepFilter;
+import ru.pavelyurkin.musiccomposer.core.composer.next.filter.musicblock.KeyVarietyFilter;
+import ru.pavelyurkin.musiccomposer.core.composer.next.filter.musicblock.RepetitionFilter;
+import ru.pavelyurkin.musiccomposer.core.composer.next.filter.musicblock.RestFilter;
+import ru.pavelyurkin.musiccomposer.core.composer.next.filter.musicblock.VarietyFilter;
+import ru.pavelyurkin.musiccomposer.core.composer.next.filter.musicblock.VoiceRangeFilter;
 
 /**
  * Created by wish on 18.02.2016.
  */
 public class BachChoralFilter extends FastComposeStepFilter {
 
-    public BachChoralFilter() {
-        super(List.of(
-                new VoiceRangeFilter(Arrays.asList(
-                        new VoiceRangeFilter.Range(C4, C6),
-                        new VoiceRangeFilter.Range(F3, F5),
-                        new VoiceRangeFilter.Range(A2, A4),
-                        new VoiceRangeFilter.Range(F2, F4)
-                )),
-                new RestFilter(EIGHTH_NOTE),
-                new KeyVarietyFilter(1, 4 * WHOLE_NOTE),
-                new VarietyFilter(-1, 6),
-                new RepetitionFilter()
-        ), 100);
-    }
+  public BachChoralFilter() {
+    super(List.of(
+        new VoiceRangeFilter(Arrays.asList(
+            new VoiceRangeFilter.Range(C4, C6),
+            new VoiceRangeFilter.Range(F3, F5),
+            new VoiceRangeFilter.Range(A2, A4),
+            new VoiceRangeFilter.Range(F2, F4)
+        )),
+        new RestFilter(EIGHTH_NOTE),
+        new KeyVarietyFilter(1, 4 * WHOLE_NOTE),
+        new VarietyFilter(-1, 6),
+        new RepetitionFilter()
+    ), 100);
+  }
 
 }
